[package]
name = "sidecar-on-dock"
version = "0.1.0"
edition = "2024"

[dependencies]
block2 = "0.6.2"
clap = { version = "4.6.1", features = ["derive"] }
core-foundation = "0.10.1"
core-foundation-sys = "0.8.7"
env_logger = "0.11.10"
log = "0.4.29"
objc2 = "0.6.4"
objc2-foundation = "0.3.2"
plist = "1.9.0"
serde = { version = "1.0.228", features = ["derive"] }
serde_json = "1.0.150"
